added stub configuration object

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,10 @@ publishing =
 [options.packages.find]
 include = duqtools, duqtools.*
 
+[options.entry_points]
+console_scripts =
+  duqtools = duqtools:parse
+
 [coverage:run]
 branch = True
 source = duqtools
