--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,9 @@ include_package_data = True
 packages = find:
 install_requires =
     numpy
+    pydantic
+    pyyaml
+    argparse
 
 
 [options.data_files]
