--- a/setup.cfg
+++ b/setup.cfg
@@ -13,12 +13,12 @@ classifiers =
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
-description = Dynamic uncertainty quantification for Tokomak reactor simulations modelling 
+description = Dynamic uncertainty quantification for Tokomak reactor simulations modelling
 keywords =
-    modelling 
-    uncertainty-quantification 
+    modelling
+    uncertainty-quantification
     tokomak
-    fusion-reactor 
+    fusion-reactor
 long_description = file: README.md
 long_description_content_type = text/markdown
 name = duqtools
@@ -32,6 +32,7 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires =
+    imas
     numpy
     pydantic
     pyyaml
@@ -49,16 +50,16 @@ develop =
     isort
     pre-commit
     yapf
+    mypy
     # testing
     nbmake
     pytest
     pytest-cov
     pycodestyle
     # documentation
-    recommonmark
-    sphinx
-    sphinx_rtd_theme
-    autodocsumm
+    mkdocs
+    mkdocstrings[python]
+    mkdocs-material
 publishing =
     twine
     wheel
@@ -90,3 +91,6 @@ builder = html
 ignore_missing_imports = True
 files = duqtools, tests
 allow_redefinition = True
+
+[mypy-yaml.*]
+ignore_missing_imports = True
