--- a/setup.cfg
+++ b/setup.cfg
@@ -69,7 +69,7 @@ include = duqtools, duqtools.*
 
 [options.entry_points]
 console_scripts =
-  duqtools = duqtools:parse
+  duqtools = duqtools:cmdline
 
 [coverage:run]
 branch = True
