Make imas an optional install for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,6 @@ include_package_data = True
 packages = find:
 install_requires =
     f90nml
-    imas
     numpy
     pydantic
     pyyaml
@@ -64,6 +63,8 @@ develop =
 publishing =
     twine
     wheel
+imas =
+    imas
 
 [options.packages.find]
 include = duqtools, duqtools.*
