Update workflow to only run when ready for review

--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -1,11 +1,21 @@
 name: code style check
 
-on: [push]
+on:
+  pull_request:
+    branches:
+      - main
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+  workflow_dispatch:
 
 jobs:
   codestyle:
 
     runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
 
     steps:
       - name: Set up python
