--- a/setup.cfg
+++ b/setup.cfg
@@ -80,7 +80,7 @@ source = duqtools
 
 [tool:pytest]
 testpaths = tests
-addopts = --cov --cov-report xml --cov-report term --cov-report html
+addopts = --cov --cov-report xml --cov-report term --cov-report html --cov-config setup.cfg
 norecursedirs=tests/helpers
 
 # Define `python setup.py build_sphinx`
