Fix create subcommand

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     numpy
     pydantic
     pyyaml
+    typing-extensions
 
 [options.data_files]
 # This section requires setuptools>=40.6.0
