--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,13 +1,18 @@
 workspace: ./workspace
 create:
-  template: template_model
+  template:
+    db: jet
+    run: 1
+    shot: 92432
+    user: g2aho
+  data:
+    db: uq_run
+    run_in_start_at: 7000
+    run_out_start_at: 8000
   matrix:
-    - source: jetto.jset
-      key: SetUpPanel.shotNum
-      values: [1, 2]
-    - source: jetto.jset
-      key: SetUpPanel.numOfGridPoints
-      values: [10, 20]
-    - source: ids
-      key: temperature
-      values: [123, 456, 789]
+    - ids: zeff
+      operator: add
+      values: [1, 2, 3]
+    - ids: t_i_average
+      operator: multiply
+      values: [1.1, 1.2, 1.3]
