--- a/.gitignore
+++ b/.gitignore
@@ -109,10 +109,14 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+pyvenv.cfg
 
 # Spyder project settings
 .spyderproject
 .spyproject
+
+# vscode
+.vscode/
 
 # Rope project settings
 .ropeproject
