fixed coverage and added extra test

--- a/setup.cfg
+++ b/setup.cfg
@@ -79,6 +79,8 @@ console_scripts =
 [coverage:run]
 branch = True
 source = duqtools
+concurrency = multiprocessing
+data_file = .coverage
 
 [tool:pytest]
 testpaths = tests
