--- a/example/config.yaml
+++ b/example/config.yaml
@@ -9,9 +9,9 @@ create:
     method: latin-hypercube
     n_samples: 3
   matrix:
-    - ids: zeff
+    - ids: profiles_1d/0/zeff
       operator: add
       values: [1, 2, 3]
-    - ids: t_i_average
+    - ids: profiles_1d/0/t_i_average
       operator: multiply
       values: [1.1, 1.2, 1.3]
