Update function to write .llcmd

--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,6 +1,6 @@
 workspace:
   root: /pfs/work/g2ssmee/jetto/runs
-  subdirectory: workspace
+  subdir: workspace
 create:
   template: template_model
   data:
