--- a/example/config.yaml
+++ b/example/config.yaml
@@ -24,3 +24,10 @@ status:
 submit:
   status_file: jetto.status
   submit_script_name: .llcmd
+plot:
+  plots:
+  - add_time_slider: false
+    x: null
+    xlabel: null
+    y: profiles_1d/0/electrons/density_thermal
+    ylabel: null
