added status --progress command

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
     pyyaml
     scipy
     typing-extensions
+    tqdm
 
 [options.data_files]
 # This section requires setuptools>=40.6.0
