--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires =
+    click
     f90nml
     numpy
     pydantic
@@ -75,7 +76,7 @@ include = duqtools, duqtools.*
 
 [options.entry_points]
 console_scripts =
-  duqtools = duqtools:cmdline
+  duqtools = duqtools:cli
 
 [coverage:run]
 branch = True
