--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,8 @@ install_requires =
     scipy
     typing-extensions
     tqdm
+    ruamel.yaml
+    pydantic-yaml @ https://github.com/v1kko/pydantic-yaml/archive/yaml_commented.zip
 
 [options.data_files]
 # This section requires setuptools>=40.6.0
