factored out pyyaml, updated pydantic-yaml repo to be separate from pydantic-yaml pull-request

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,4 +4,8 @@ mkdocs-material
 mkdocstrings[python]
 numpy
 pydantic
-pyyaml
+scipy
+typing-extensions
+tqdm
+ruamel.yaml
+pydantic-yaml @ https://github.com/v1kko/pydantic-yaml/archive/yaml_commented.zip
