duqtools init now outputs commented yaml file (#138)
* duqtools init now outputs commented yaml file

* factored out pyyaml, updated pydantic-yaml repo to be separate from pydantic-yaml pull-request

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,10 +36,11 @@ install_requires =
     f90nml
     numpy
     pydantic
-    pyyaml
     scipy
     typing-extensions
     tqdm
+    ruamel.yaml
+    pydantic-yaml @ https://github.com/v1kko/pydantic-yaml/archive/for_duqtools.zip
 
 [options.data_files]
 # This section requires setuptools>=40.6.0
