--- a/setup.cfg
+++ b/setup.cfg
@@ -34,13 +34,14 @@ packages = find:
 install_requires =
     click
     f90nml
+    matplotlib
     numpy
     pydantic
-    scipy
-    typing-extensions
-    tqdm
-    ruamel.yaml
     pydantic-yaml @ https://github.com/v1kko/pydantic-yaml/archive/for_duqtools.zip
+    ruamel.yaml
+    scipy
+    tqdm
+    typing-extensions
 
 [options.data_files]
 # This section requires setuptools>=40.6.0
@@ -71,7 +72,9 @@ publishing =
     wheel
 imas =
     imas
-streamlit =
+dash =
+    altair
+    pandas
     streamlit
 
 [options.packages.find]
