Depend on `mkdocs-click` for documenting cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,8 +65,9 @@ develop =
     pycodestyle
     # documentation
     mkdocs
-    mkdocstrings[python]
+    mkdocs-click
     mkdocs-material
+    mkdocstrings[python]
 publishing =
     twine
     wheel
