--- a/setup.cfg
+++ b/setup.cfg
@@ -13,11 +13,11 @@ classifiers =
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
-description = Dynamic uncertainty quantification for Tokomak reactor simulations modelling
+description = Dynamic uncertainty quantification for Tokamak reactor simulations modelling
 keywords =
     modelling
     uncertainty-quantification
-    tokomak
+    tokamak
     fusion-reactor
 long_description = file: README.md
 long_description_content_type = text/markdown
