--- a/setup.cfg
+++ b/setup.cfg
@@ -83,7 +83,7 @@ include = duqtools, duqtools.*
 
 [options.entry_points]
 console_scripts =
-  duqtools = duqtools:cli
+  duqtools = duqtools.cli:cli
 
 [coverage:run]
 branch = True
