--- a/example/config-init.yaml
+++ b/example/config-init.yaml
@@ -1,21 +1,20 @@
-create: null
+create:
+  matrix:
+  - ids: profiles_1d/0/t_i_average
+    operator: multiply
+    values:
+    - 1.1
+    - 1.2
+    - 1.3
+  sampler:
+    method: cartesian-product
+  template: /pfs/work/g2ssmee/jetto/runs/duqtools_template
 plot:
-  data:
-  - db: jet
-    run: 251
-    shot: 94875
-    user: g2vazizi
   plots:
   - add_time_slider: false
     x: null
     xlabel: null
     y: profiles_1d/0/electrons/density_thermal
     ylabel: null
-status:
-  msg_completed: 'Status : Completed successfully'
-  msg_failed: 'Status : Failed'
-  msg_running: 'Status : Running'
-submit:
-  status_file: jetto.status
-  submit_script_name: .llcmd
-workspace: ./workspace
+workspace:
+  root: /pfs/work/g2vazizi/jetto/runs/
