Add jinja2 as requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,7 @@ develop =
     pytest-dependency
     pycodestyle
     # documentation
+    jinja2
     mkdocs
     mkdocs-click
     mkdocs-material
