--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ develop =
     jinja2
     mkdocs
     mkdocs-click
+    mkdocs-gen-files
     mkdocs-material
     mkdocstrings[python]
 publishing =
