--- a/tests/dry_run.yaml
+++ b/tests/dry_run.yaml
@@ -23,6 +23,10 @@ create: # Configuration for the create subcommand
   sampler: # For efficient UQ, it may not be necessary to sample the entire matrix or hypercube. By default, the cartesian product is taken. For more efficient sampling of the space, the following `method` choices are available: [`latin-hypercube`](en.wikipedia.org/wiki/Latin_hypercube_sampling), [`sobol`](en.wikipedia.org/wiki/Sobol_sequence), [`halton`](en.wikipedia.org/wiki/Halton_sequence). Where `n_samples` gives the number of samples to extract.
     method: latin-hypercube
     n_samples: 3  # Number of samples to take
-  template: /pfs/work/g2ssmee/jetto/runs/duqtools_template # The create subroutine takes as a template directory. This can be a directory with a finished run, or one just stored by JAMS (but not yet started). Duqtools uses the input IDS machine (db) name, user, shot, run number from e.g. `jetto.in` to find the data to modify for the UQ runs.
+  data:
+    db: 'test'
+    run_in_start_at: 7010
+    run_out_start_at: 8010
+  template: ./template_model # The create subroutine takes as a template directory. This can be a directory with a finished run, or one just stored by JAMS (but not yet started). Duqtools uses the input IDS machine (db) name, user, shot, run number from e.g. `jetto.in` to find the data to modify for the UQ runs.
 workspace:
   root: .  # The folder from which experiments have to be run, rjettov runs relative to this folder
