--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,13 @@ markdown_extensions:
   - mkdocs-click
   - attr_list
   - pymdownx.extra
+  - pymdownx.arithmatex:
+      generic: true
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 plugins:
 - search
