--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
     if: github.event.pull_request.draft == false
     strategy:
       fail-fast: false
-      dimensions:
+      matrix:
         os: ['ubuntu-latest']
         python-version: ['3.7']
 
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install -e .[develop]
+          python -m pip install -e .[develop,dash]
 
       - name: Test with pytest
         run: python -m pytest
