--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,12 @@ markdown_extensions:
   - mkdocs-click
   - attr_list
   - pymdownx.extra
+  - pymdownx.arithmatex:
+      generic: true
+
+extra_javascript:
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 plugins:
 - search
@@ -47,6 +53,7 @@ plugins:
       python:
         import:
         - https://docs.python.org/3/objects.inv
+        - https://numpy.org/doc/stable/objects.inv
         selection:
           docstring_style: numpy
           docstring_options:
