Use the op_queue everywhere

--- a/example/config.yaml
+++ b/example/config.yaml
@@ -25,8 +25,7 @@ submit:
   submit_script_name: .llcmd
 plot:
   plots:
-  - add_time_slider: false
-    x: null
+  - x: null
     xlabel: null
     y: profiles_1d/0/electrons/density_thermal
     ylabel: null
