added documentation for operations

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
     - config/status.md
     - config/plot.md
   - Dashboard: dash.md
+  - Operations: operations.md
   - 🔗 Source code: https://github.com/CarbonCollective/fusion-dUQtools
   - 🔗 Issues: https://github.com/CarbonCollective/fusion-dUQtools/issues
 
@@ -68,3 +69,7 @@ plugins:
 - gen-files:
     scripts:
       - docs/gendocs.py
+
+watch:
+  - duqtools/
+  - docs/
