Remove comments from yaml

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ install_requires =
     numpy
     pandas
     pydantic
-    pydantic-yaml @ https://github.com/v1kko/pydantic-yaml/archive/for_duqtools.zip
+    pydantic-yaml
     ruamel.yaml
     scipy
     tqdm
