--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,10 @@ version = 0.1.0
 
 [options]
 zip_safe = False
-include_package_data = True
 packages = find:
+package_dir =
+    = src
+include_package_data = True
 install_requires =
     altair
     click
@@ -44,10 +46,6 @@ install_requires =
     tqdm
     typing-extensions
 
-[options.data_files]
-# This section requires setuptools>=40.6.0
-# It remains empty for now
-# Check if MANIFEST.in works for your purposes
 
 [options.extras_require]
 develop =
@@ -74,13 +72,14 @@ develop =
 publishing =
     twine
     wheel
+    build
 imas =
     imas
 dash =
     streamlit
 
 [options.packages.find]
-include = duqtools, duqtools.*
+where = src
 
 [options.entry_points]
 console_scripts =
