Move dashboard to data directory

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,8 @@ install_requires =
     altair
     click
     f90nml
+    # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
+    importlib_resources
     numpy
     pandas
     pydantic
