Address deprecation notice for 'find' with data packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ version = 0.1.0
 
 [options]
 zip_safe = False
-packages = find:
+packages = find_namespace:
 package_dir =
     = src
 include_package_data = True
