--- a/setup.cfg
+++ b/setup.cfg
@@ -29,12 +29,16 @@ version = 0.1.0
 
 [options]
 zip_safe = False
+packages = find_namespace:
+package_dir =
+    = src
 include_package_data = True
-packages = find:
 install_requires =
     altair
     click
     f90nml
+    # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
+    importlib_resources
     numpy
     pandas
     pydantic
@@ -44,10 +48,6 @@ install_requires =
     tqdm
     typing-extensions
 
-[options.data_files]
-# This section requires setuptools>=40.6.0
-# It remains empty for now
-# Check if MANIFEST.in works for your purposes
 
 [options.extras_require]
 develop =
@@ -74,13 +74,14 @@ develop =
 publishing =
     twine
     wheel
+    build
 imas =
     imas
 dash =
     streamlit
 
 [options.packages.find]
-include = duqtools, duqtools.*
+where = src
 
 [options.entry_points]
 console_scripts =
