--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,15 @@
 author = Carbon Collective
 author_email = s.smeets@esciencecenter.nl
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
+    Intended Audience :: Science/Research
     License :: OSI Approved :: Apache Software License
     Natural Language :: English
+    Operating System :: POSIX :: Linux
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
+    Topic :: Scientific/Engineering
 description = Dynamic uncertainty quantification for Tokamak reactor simulations modelling
 keywords =
     modelling
@@ -24,6 +27,7 @@ long_description_content_type = text/markdown
 name = duqtools
 project_urls =
     Bug Tracker = https://github.com/carboncollective/duqtools/issues
+    Documentation = https://duqtools.readthedocs.io
 url = https://github.com/carboncollective/duqtools
 version = 0.1.0
 
