Update docs build

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,6 @@ install_requires =
     tqdm
     typing-extensions
 
-
 [options.extras_require]
 develop =
     # deployment
@@ -68,7 +67,7 @@ develop =
     pytest-cov
     pytest-dependency
     pycodestyle
-    # documentation
+docs =
     jinja2
     mkdocs
     mkdocs-click
