--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -18,4 +18,7 @@ mkdocs:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: docs/requirements.txt
+   - method: pip
+     path: .
+     extra_requirements:
+      - docs
