--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,10 @@ classifiers =
     Operating System :: POSIX :: Linux
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering
 description = Dynamic uncertainty quantification for Tokamak reactor simulations modelling
 keywords =
