Add provenance to each copied IDS

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,8 @@ install_requires =
     scipy
     tqdm
     typing-extensions
+    gitpython
+    setuptools
 
 [options.extras_require]
 develop =
