--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,7 @@ docs =
     jinja2
     mkdocs
     mkdocs-click
+    mkdocs-jupyter
     mkdocs-gen-files
     mkdocs-material
     mkdocstrings[python]
