Render notebook in mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,8 @@ nav:
   - Dashboard: dash.md
   - Visualization: visualization.md
   - Operations: operations.md
-  - Example notebook: ../scripts/getting_started.ipynb
+  - Examples:
+    - Getting started: examples/getting_started.ipynb
   - 🔗 Source code: https://github.com/CarbonCollective/fusion-dUQtools
   - 🔗 Issues: https://github.com/CarbonCollective/fusion-dUQtools/issues
 
@@ -73,6 +74,8 @@ plugins:
       - docs/gendocs.py
 - mkdocs-jupyter:
     include_source: True
+    ignore:
+      - gendocs.py
 
 watch:
   - src/duqtools
