--- a/setup.cfg
+++ b/setup.cfg
@@ -77,6 +77,7 @@ docs =
     jinja2
     mkdocs
     mkdocs-click
+    mkdocs-jupyter
     mkdocs-gen-files
     mkdocs-material
     mkdocstrings[python]
