--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install build  # setuptools wheel twine
+        python -m pip install build setuptools wheel
         python -m build --no-isolation
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@master
