--- a/example/config-simple.yaml
+++ b/example/config-simple.yaml
@@ -2,13 +2,15 @@ workspace: ./workspace
 create:
   template: template_model
   data:
-    db: jet
+    imasdb: jet
     run_in_start_at: 7000
     run_out_start_at: 8000
   dimensions:
-    - ids: profiles_1d/0/zeff
+    - ids: core_profiles
+      path: profiles_1d/0/zeff
       operator: add
       values: [1,]
-    - ids: profiles_1d/0/t_i_average
+    - ids: core_profiles
+      path: profiles_1d/0/t_i_average
       operator: multiply
       values: [1.1,]
