--- a/example/config.yaml
+++ b/example/config.yaml
@@ -10,10 +10,12 @@ create:
     method: latin-hypercube
     n_samples: 3
   dimensions:
-    - ids: profiles_1d/0/zeff
+    - ids: core_profiles
+      path: profiles_1d/0/zeff
       operator: add
       values: [1, 2, 3]
-    - ids: profiles_1d/0/t_i_average
+    - ids: core_profiles
+      path: profiles_1d/0/t_i_average
       operator: multiply
       values: [1.1, 1.2, 1.3]
 status:
