Implement xarray conversion method for mapping

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ install_requires =
     altair
     click
     f90nml
+    gitpython
     # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
     importlib_resources
     numpy
@@ -53,10 +54,10 @@ install_requires =
     pydantic-yaml
     ruamel.yaml
     scipy
+    setuptools
     tqdm
     typing-extensions
-    gitpython
-    setuptools
+    xarray
 
 [options.extras_require]
 develop =
