--- a/example/config-simple.yaml
+++ b/example/config-simple.yaml
@@ -1,4 +1,13 @@
 workspace: ./workspace
+variables:
+  - name: zeff
+    ids: core_profiles
+    path: profiles_1d/$time/zeff
+    dims: [x]
+  - name: t_i_average
+    ids: core_profiles
+    path: profiles_1d/$time/t_i_average
+    dims: [x]
 create:
   template: template_model
   data:
@@ -6,11 +15,9 @@ create:
     run_in_start_at: 7000
     run_out_start_at: 8000
   dimensions:
-    - ids: core_profiles
-      path: profiles_1d/0/zeff
+    - variable: zeff
       operator: add
       values: [1,]
-    - ids: core_profiles
-      path: profiles_1d/0/t_i_average
+    - variable: t_i_average
       operator: multiply
       values: [1.1,]
