--- a/tests/test_cmdline_config.yaml
+++ b/tests/test_cmdline_config.yaml
@@ -9,6 +9,10 @@ variables:
     ids: core_profiles
     path: profiles_1d/$time/t_i_average
     dims: [x]
+  - name: rho_tor_norm
+    ids: core_profiles
+    path: profiles_1d/$time/grid/rho_tor_norm
+    dims: [x]
 create:
   template: template_model
   data:
