--- a/tests/test_cmdline_config.yaml
+++ b/tests/test_cmdline_config.yaml
@@ -13,6 +13,10 @@ variables:
     ids: core_profiles
     path: profiles_1d/$time/grid/rho_tor_norm
     dims: [x]
+  - name: time
+    ids: core_profiles
+    path: time
+    dims: [time]
 create:
   template: template_model
   data:
