Update example notebooks

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,8 @@ nav:
     - Public API: api.md
     - Operations: operations.md
   - Examples:
-    - Getting started: examples/getting_started.ipynb
+    - examples/imas_handles.ipynb
+    - examples/xarray.ipynb
   - 🔗 Source code: https://github.com/CarbonCollective/fusion-dUQtools
   - 🔗 Issues: https://github.com/CarbonCollective/fusion-dUQtools/issues
 
