--- a/tests/dry_run.yaml
+++ b/tests/dry_run.yaml
@@ -1,16 +1,16 @@
 variables:
   - name: zeff
     ids: core_profiles
-    path: profiles_1d/$time/zeff
-    dims: [x]
+    path: profiles_1d/*/zeff
+    dims: [time,x]
   - name: t_i_average
     ids: core_profiles
-    path: profiles_1d/$time/t_i_average
-    dims: [x]
+    path: profiles_1d/*/t_i_average
+    dims: [time,x]
   - name: rho_tor_norm
     ids: core_profiles
-    path: profiles_1d/$time/grid/rho_tor_norm
-    dims: [x]
+    path: profiles_1d/*/grid/rho_tor_norm
+    dims: [time,x]
   - name: time
     ids: core_profiles
     path: time
