--- a/example/config.yaml
+++ b/example/config.yaml
@@ -3,16 +3,16 @@ workspace:
 variables:
   - name: zeff
     ids: core_profiles
-    path: profiles_1d/$time/zeff
-    dims: [x]
+    path: profiles_1d/*/zeff
+    dims: [time,x]
   - name: t_i_average
     ids: core_profiles
-    path: profiles_1d/$time/t_i_average
-    dims: [x]
+    path: profiles_1d/*/t_i_average
+    dims: [time,x]
 create:
   template: template_model
   data:
-    db: jet
+    db: test
     run_in_start_at: 7000
     run_out_start_at: 8000
   sampler:
