--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,3 +46,9 @@ jobs:
 
       - name: Test with pytest
         run: python -m pytest
+
+      - name: upload code coverage to codecov.io
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: true # optional (default = false)
