--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,7 @@ install_requires =
     tqdm
     typing-extensions
     xarray
-    jetto-tools
+    jetto-tools @ https://gitlab.com/jintrac/jetto-pythontools/-/archive/vazizi/feature/flexible_lookup/jetto-pythontools-vazizi-feature-flexible_lookup.zip
 
 [options.extras_require]
 develop =
