--- a/example/config.yaml
+++ b/example/config.yaml
@@ -40,7 +40,7 @@ create:
     - variable: t_i_average
       operator: multiply
       values: [1.1, 1.2, 1.3]
-system: jetto-pythontools
+system: jetto-duqtools
 status:
   msg_completed: 'Status : Completed successfully'
   msg_failed: 'Status : Failed'
