--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,18 +1,33 @@
 workspace:
   root: ./
 variables:
-  - name: zeff
-    ids: core_profiles
-    path: profiles_1d/*/zeff
-    dims: [time,x]
-  - name: t_i_average
-    ids: core_profiles
-    path: profiles_1d/*/t_i_average
-    dims: [time,x]
+- dims:
+  - time
+  - x
+  ids: core_profiles
+  name: rho_tor_norm
+  path: profiles_1d/*/grid/rho_tor_norm
+- dims:
+  - time
+  - x
+  ids: core_profiles
+  name: t_i_average
+  path: profiles_1d/*/t_i_average
+- dims:
+  - time
+  - x
+  ids: core_profiles
+  name: zeff
+  path: profiles_1d/*/zeff
+- dims:
+  - time
+  ids: core_profiles
+  name: time
+  path: time
 create:
   template: template_model
   data:
-    db: test
+    imasdb: test
     run_in_start_at: 7000
     run_out_start_at: 8000
   sampler:
@@ -25,6 +40,7 @@ create:
     - variable: t_i_average
       operator: multiply
       values: [1.1, 1.2, 1.3]
+system: jetto-duqtools
 status:
   msg_completed: 'Status : Completed successfully'
   msg_failed: 'Status : Failed'
