updated MANIFEST.in to include json files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-include src *.txt *.md *.py *.yaml
+recursive-include src *.txt *.md *.py *.yaml *.json
 include LICENSE
 include README.md
