--- a/tests/dry_run_jettoduqtools.yaml
+++ b/tests/dry_run_jettoduqtools.yaml
@@ -1,4 +1,5 @@
 variables:
+  - name: major_radius
   - name: zeff
     ids: core_profiles
     path: profiles_1d/*/zeff
@@ -17,6 +18,9 @@ variables:
     dims: [time]
 create:
   dimensions:
+  - variable: major_radius
+    operator: copyto
+    values: [295,297]
   - variable: t_i_average
     operator: multiply
     values:
