--- a/tests/test_cmdline_config.yaml
+++ b/tests/test_cmdline_config.yaml
@@ -1,6 +1,5 @@
-workspace:
-  root: .
 variables:
+  - name: major_radius
   - name: zeff
     ids: core_profiles
     path: profiles_1d/*/zeff
@@ -18,20 +17,24 @@ variables:
     path: time
     dims: [time]
 create:
-  template: template_model
-  data:
-    imasdb: jet
-    run_in_start_at: 7000
-    run_out_start_at: 8000
+  dimensions:
+  - variable: major_radius
+    operator: copyto
+    values: [295,297]
+  - variable: t_i_average
+    operator: multiply
+    values:
+    - 1.1
+    - 1.2
+    - 1.3
   sampler:
     method: latin-hypercube
     n_samples: 3
-  dimensions:
-    - variable: zeff
-      operator: add
-      values: [1, 2, 3]
-    - variable: t_i_average
-      operator: multiply
-      values: [1.1, 1.2, 1.3]
-submit:
-  submit_command: "true"
+  data:
+    imasdb: 'test'
+    run_in_start_at: 7010
+    run_out_start_at: 7010
+  template: ./template_model
+system: jetto-pythontools
+workspace:
+  root: .
