specify jetto_tools >= 1.8.6

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,7 @@ install_requires =
     tqdm
     typing-extensions
     xarray
-    jetto-tools @ https://gitlab.com/jintrac/jetto-pythontools/-/archive/master/jetto-pythontools-master.zip
+    jetto-tools >= 1.8.6
 
 [options.extras_require]
 develop =
