--- a/tests/config_jetto_duqtools.yaml
+++ b/tests/config_jetto_duqtools.yaml
@@ -26,6 +26,8 @@ variables:
     ids: core_profiles
     path: time
     dims: [time]
+  - name: t_start
+  - name: t_end
 create:
   dimensions:
   - variable: major_radius
@@ -33,10 +35,13 @@ create:
     values: [295,297]
   - variable: t_i_average
     operator: multiply
-    values:
-    - 1.1
-    - 1.2
-    - 1.3
+    values: [1.1, 1.2, 1.3]
+  - - variable: t_end
+      operator: copyto
+      values: [0.4, 0.5, 0.6]
+    - variable: t_start
+      operator: copyto
+      values: [0.3, 0.4, 0.5]
   sampler:
     method: latin-hypercube
     n_samples: 3
