--- a/example/config.yaml
+++ b/example/config.yaml
@@ -40,6 +40,10 @@ variables:
   ids: core_profiles
   name: time
   path: time
+- name: t_start
+  type: Jetto
+- name: t_end
+  type: Jetto
 create:
   template: template_model
   data:
@@ -50,6 +54,12 @@ create:
     method: latin-hypercube
     n_samples: 3
   dimensions:
+    -  - variable: t_start
+         operator: copyto
+         values: [0.1, 0.2, 0.3]
+       - variable: t_end
+         operator: copyto
+         values: [1.1, 1.2, 1.3]
     - variable: major_radius
       operator: copyto
       values: [295, 296, 297]
