--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -5,10 +5,11 @@ on:
     branches:
       - main
     types:
-      - opened
-      - reopened
-      - synchronize
+      - review_requested
       - ready_for_review
+  push:
+    branches:
+      - 'main' # needed to update badges in readme
   workflow_dispatch:
 
 jobs:
