--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -7,7 +7,7 @@ on:
     types:
       - opened
       - reopened
-      - synchronized
+      - synchronize
       - ready_for_review
   push:
     branches:
