--- a/setup.cfg
+++ b/setup.cfg
@@ -118,6 +118,9 @@ allow_redefinition = True
 [mypy-yaml.*]
 ignore_missing_imports = True
 
+[mypy-pkg_resources.*]
+ignore_missing_imports = True
+
 [flake8]
 exclude = scripts
 max-line-length = 96
