--- a/codecov.yml
+++ b/codecov.yml
@@ -5,8 +5,8 @@ coverage:
     project:
       default: false
       duqtools:
-        target: auto
-        threshold: 50%
+        target: 70%
+        threshold: 5%
         paths:
           - src/duqtools
 comment: false
