--- a/setup.cfg
+++ b/setup.cfg
@@ -98,7 +98,7 @@ where = src
 
 [options.entry_points]
 console_scripts =
-  duqtools = duqtools.cli:cli
+  duqtools = duqtools.cli:cli_entry
 
 [coverage:run]
 branch = True
